--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -6,6 +6,7 @@
 @import "button";
 @import "util";
 @import "nav";
+@import "dd.css";
 
 html {
   position: relative;
@@ -22,6 +23,10 @@ body {
   background-color: #fff;
   color: $main_black;
   height: 100%;
+}
+
+:focus {
+  outline: none;
 }
 
 .wrapper {
@@ -184,6 +189,7 @@ button:focus {
 
 .l_site-main {
   @import "profile/profile";
+  @import "create_publications/create_publications";
   @media (max-width: 991px) {
     margin-top: 3.5rem;
   }
@@ -501,6 +507,15 @@ button:focus {
     margin-bottom: 1.875rem;
     @media (max-width: 576px) {
       margin-bottom: 0.9375rem;
+    }
+
+    .l_site-content-title{
+      h3 {
+        display: inline-flex;
+        padding: 0.625rem 0;
+        font-size: 1.5rem;
+        border-bottom: 6px solid #E678AB;
+      }
     }
 
     .l_create-pub {
