--- a/css/app.css
+++ b/css/app.css
@@ -9934,7 +9934,7 @@ h3 {
   box-shadow: 0 0 29.64px 8.36px rgba(116, 27, 200, 0.15);
 }
 
-.btn-inline-custom, .btn-inline-custom4, .btn-inline-custom3, .btn-inline-custom2 {
+.btn-inline-custom, .btn-inline-custom5, .btn-inline-custom4, .btn-inline-custom3, .btn-inline-custom2 {
   color: #fff;
   background-color: #FF3C88;
   font-size: 1rem;
@@ -9943,12 +9943,12 @@ h3 {
   border: 2px solid #FF3C88;
   font-family: "RubikRegular", sans-serif;
 }
-.btn-inline-custom:hover, .btn-inline-custom4:hover, .btn-inline-custom3:hover, .btn-inline-custom2:hover {
+.btn-inline-custom:hover, .btn-inline-custom5:hover, .btn-inline-custom4:hover, .btn-inline-custom3:hover, .btn-inline-custom2:hover {
   color: #fff;
   border-color: #cd2868;
   background-color: #cd2868;
 }
-.btn-inline-custom:focus, .btn-inline-custom4:focus, .btn-inline-custom3:focus, .btn-inline-custom2:focus {
+.btn-inline-custom:focus, .btn-inline-custom5:focus, .btn-inline-custom4:focus, .btn-inline-custom3:focus, .btn-inline-custom2:focus {
   color: #fff;
   border-color: #b01e56;
   background-color: #b01e56;
@@ -9987,6 +9987,7 @@ h3 {
   color: #fff;
   border-color: #3b287e;
   background-color: #3b287e;
+  border-radius: 34px;
 }
 .btn-inline-custom3 svg {
   width: 11px;
@@ -10011,10 +10012,32 @@ h3 {
   color: #fff;
   border-color: #3b287e;
   background-color: #3b287e;
+  border-radius: 34px;
 }
 .btn-inline-custom4 svg {
   width: 11px;
   margin-right: 3px;
+}
+
+.btn-inline-custom5 {
+  border: solid 1px #FF3C88;
+  border-radius: 10px;
+  background-color: #FF3C88;
+  padding: 0.63rem 5.7rem;
+  font-size: 0.875rem;
+  font-weight: 500;
+  font-family: "Montserrat", sans-serif;
+}
+.btn-inline-custom5:hover {
+  color: #fff;
+  border-color: #cd2868;
+  background-color: #cd2868;
+}
+.btn-inline-custom5:focus {
+  color: #fff;
+  border-color: #b01e56;
+  background-color: #b01e56;
+  border-radius: 34px;
 }
 
 .btn-outline-custom, .btn-outline-custom2 {
@@ -10064,6 +10087,7 @@ h3 {
   color: #fff;
   border-color: #cdb1fd;
   background-color: #cdb1fd;
+  border-radius: 34px;
 }
 
 .btn-custom-lg {
@@ -10076,6 +10100,21 @@ h3 {
     padding: 0.5rem 5rem;
     font-size: 19px;
   }
+}
+
+.btn-cancel {
+  background-color: #999999;
+  border-color: #999999;
+}
+.btn-cancel:hover {
+  background-color: #838080;
+  border-color: #838080;
+}
+.btn-cancel:focus {
+  text-decoration: none;
+  border-radius: 34px;
+  background-color: #686666;
+  border-color: #686666;
 }
 
 @media (max-width: 991px) {
@@ -10218,6 +10257,10 @@ h3 {
   }
 }
 
+.w-45 {
+  width: 45% !important;
+}
+
 .perfect-scrollbar2 {
   max-height: 410px;
   min-height: 200px;
@@ -10227,6 +10270,11 @@ h3 {
   .perfect-scrollbar2 {
     overflow: auto;
   }
+}
+
+label {
+  display: block;
+  margin-bottom: 0.5rem;
 }
 
 .navbar-collapse {
@@ -10617,7 +10665,7 @@ button:focus {
     text-align: center;
   }
 }
-.l_site-main .template_select .template_select-title, .l_site-main .account_select .account_select-title, .l_site-main .l_site-timeline_profile .timeline_profile-title {
+.l_site-main .post_comment .post_comment-label, .l_site-main .post_description .post_description-label, .l_site-main .template_select .template_select-title, .l_site-main .account_select .account_select-title, .l_site-main .l_site-timeline_profile .timeline_profile-title {
   font-size: 1.125rem;
   color: #2c2d2e;
   margin-bottom: 0.9375rem;
@@ -10626,6 +10674,21 @@ button:focus {
 .l_site-main .account_select, .l_site-main .l_site-timeline_profile .timeline_profile-title {
   padding-top: 2rem;
 }
+.l_site-main .post_comment textarea, .l_site-main .post_description textarea {
+  border: 1px solid #f3edfb;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  background-color: #fffdfd;
+  resize: none;
+  color: #a1a1a1;
+  font-size: 14px;
+}
+.l_site-main .post_comment textarea:-moz-placeholder, .l_site-main .post_description textarea:-moz-placeholder {
+  color: #a1a1a1;
+}
+.l_site-main .post_comment textarea::-webkit-input-placeholder, .l_site-main .post_description textarea::-webkit-input-placeholder {
+  color: #a1a1a1;
+}
 .l_site-main .l_site-timeline_profile .timeline_profile-title {
   padding-bottom: 0;
 }
@@ -10633,6 +10696,9 @@ button:focus {
   .l_site-main .l_site-timeline_profile .timeline_profile-title {
     text-align: center;
   }
+}
+.l_site-main .template_select {
+  margin-bottom: 1.5625rem;
 }
 .l_site-main .template_select .ddcommon .ddTitle .description, .l_site-main .template_select .dd .ddChild li .description {
   display: inline-flex;
@@ -10652,7 +10718,10 @@ button:focus {
   max-width: 300px;
   cursor: pointer;
 }
-.l_site-main .qq-gallery .qq-upload-button {
+.l_site-main .upload_file {
+  margin-bottom: 1.5625rem;
+}
+.l_site-main .upload_file .qq-gallery .qq-upload-button {
   width: 100%;
   height: 83%;
   position: absolute;
@@ -10660,7 +10729,7 @@ button:focus {
   border: transparent;
   box-shadow: none;
 }
-.l_site-main .qq-gallery .qq-upload-button {
+.l_site-main .upload_file .qq-gallery .qq-upload-button {
   position: absolute !important;
   right: 0px;
   top: 0px;
@@ -10671,8 +10740,40 @@ button:focus {
   opacity: 0;
   height: 100%;
 }
-.l_site-main .qq-gallery .qq-upload-list li {
+.l_site-main .upload_file .qq-gallery .qq-upload-list li {
   margin: 0 25px 25px 1px;
+}
+.l_site-main .upload_file .qq-gallery.qq-uploader {
+  border: 1px solid #f3edfb;
+  background-color: #fffdfd;
+}
+.l_site-main .post_description {
+  margin-bottom: 1.5625rem;
+}
+.l_site-main .post_description .post_description-decorator {
+  position: relative;
+}
+.l_site-main .post_description .post_description-decorator::before {
+  content: "";
+  height: 30px;
+  bottom: -5px;
+  border: 1px solid #f3edfb;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  background-color: #fffdfd;
+  width: 100%;
+  position: absolute;
+}
+.l_site-main .post_description #count_message {
+  color: #999999;
+  font-size: 1rem;
+  z-index: 10;
+  position: relative;
+  left: 10px;
+  top: 3px;
+}
+.l_site-main .post_comment {
+  margin-bottom: 1.5625rem;
 }
 @media (max-width: 991px) {
   .l_site-main {
