--- a/src/scss/create_publications/_util.scss
+++ b/src/scss/create_publications/_util.scss
@@ -27,3 +27,16 @@
 %container{
   padding-top: 2rem;
 }
+
+%textarea {
+  border: 1px solid #f3edfb;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  background-color: #fffdfd;
+  resize: none;
+  color: #a1a1a1;
+  font-size: 14px;
+  &:-moz-placeholder { color: #a1a1a1; }
+  &::-webkit-input-placeholder { color: #a1a1a1; }
+}
+
