--- a/src/scss/create_publications/create_publications.scss
+++ b/src/scss/create_publications/create_publications.scss
@@ -14,22 +14,24 @@
   }
 }
 
-.l_site-new_post{
+.l_site-new_post {
 
 }
 
-.account_select{
+.account_select {
   @extend %container;
-  .account_select-title{
+
+  .account_select-title {
     @extend %title;
   }
 }
 
-.template_select{
-  .template_select-title{
+.template_select {
+  margin-bottom: 1.5625rem;
+  .template_select-title {
     @extend %title;
   }
-  .ddcommon .ddTitle .description,  .dd .ddChild li .description{
+  .ddcommon .ddTitle .description, .dd .ddChild li .description {
     display: inline-flex;
     float: left;
     font-size: 16px;
@@ -37,7 +39,8 @@
     color: #2c2d2e;
     margin-right: 20px;
   }
-  .ddcommon .ddTitle .ddTitleText .ddlabel,.dd .ddChild li .ddlabel{
+
+  .ddcommon .ddTitle .ddTitleText .ddlabel, .dd .ddChild li .ddlabel {
     color: #999999;
     font-size: 16px;
     display: inline-flex;
@@ -49,27 +52,78 @@
   }
 }
 
-.qq-gallery .qq-upload-button{
-  width: 100%;
-  height: 83%;
-  position: absolute;
-  background: transparent;
-  border: transparent;
-  box-shadow: none;
+.upload_file {
+  margin-bottom: 1.5625rem;
+  .qq-gallery .qq-upload-button {
+    width: 100%;
+    height: 83%;
+    position: absolute;
+    background: transparent;
+    border: transparent;
+    box-shadow: none;
+  }
+
+  .qq-gallery .qq-upload-button {
+    position: absolute !important;
+    right: 0px;
+    top: 0px;
+    font-size: 0;
+    margin: 0px;
+    padding: 0px;
+    cursor: pointer;
+    opacity: 0;
+    height: 100%;
+  }
+
+  .qq-gallery .qq-upload-list li {
+    margin: 0 25px 25px 1px;
+  }
+
+  .qq-gallery.qq-uploader {
+    border: 1px solid rgb(243, 237, 251);
+    background-color: rgb(255, 253, 253);
+  }
 }
 
-.qq-gallery .qq-upload-button{
-  position: absolute !important;
-  right: 0px;
-  top: 0px;
-  font-size: 0;
-  margin: 0px;
-  padding: 0px;
-  cursor: pointer;
-  opacity: 0;
-  height: 100%;
+.post_description{
+  margin-bottom: 1.5625rem;
+  .post_description-label {
+    @extend %title;
+  }
+  textarea{
+    @extend %textarea;
+  }
+  .post_description-decorator{
+    position: relative;
+    &::before{
+      content: "";
+      height: 30px;
+      bottom: -5px;
+      border: 1px solid #f3edfb;
+      border-bottom-left-radius: 10px;
+      border-bottom-right-radius: 10px;
+      background-color: #fffdfd;
+      width: 100%;
+      position: absolute;
+    }
+  }
+  #count_message{
+    color: #999999;
+    font-size: 1rem;
+    z-index: 10;
+    position: relative;
+    left: 10px;
+    top: 3px;
+  }
 }
 
-.qq-gallery .qq-upload-list li{
-  margin: 0 25px 25px 1px;
+
+.post_comment{
+  margin-bottom: 1.5625rem;
+  .post_comment-label {
+    @extend %title;
+  }
+  textarea{
+    @extend %textarea;
+  }
 }
